# clear

./: .gitignore  LICENSE.txt  README.md  demo.ipynb  demo.py  requirements.txt
PCS_UQ/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
PCS_UQ/experiments/configs/: regression_consts.py
PCS_UQ/experiments/notebooks/: classification_widths_reductions.tex  subgroup_reg_viz.ipynb  viz_ablation.ipynb  viz_class.ipynb  viz_reg.ipynb
PCS_UQ/experiments/scripts/: ablation_exp.py  submit_jobs.sh  submit_jobs_ablation.sh
PCS_UQ/src/: __init__.py
PCS_UQ/src/PCS/: __init__.py
PCS_UQ/src/PCS/regression/: __init__.py  pcs_oob.py  pcs_uq.py
PCS_UQ/src/conformal_methods/regression/: jackknife_bootstrap.py
PCS_UQ/src/metrics/: regression_metrics.py
UACQR/: README.md  experiment.py  helper.py  uacqr.py  uacqr_parallel.py
data/case_study/: README.md
data/data_ailerons/: bin_df.pkl  importances.csv
data/data_airfoil/: bin_df.pkl  importances.csv
data/data_allstate/: bin_df.pkl  importances.csv
data/data_ca_housing/: bin_df.pkl  importances.csv
data/data_computer/: bin_df.pkl  importances.csv
data/data_concrete/: bin_df.pkl  importances.csv
data/data_diamond/: bin_df.pkl  importances.csv
data/data_elevator/: bin_df.pkl  importances.csv
data/data_energy_efficiency/: bin_df.pkl  importances.csv
data/data_insurance/: bin_df.pkl  importances.csv
data/data_kin8nm/: bin_df.pkl  importances.csv
data/data_miami_housing/: bin_df.pkl  importances.csv
data/data_parkinsons/: bin_df.pkl  (+1 more)
results/: README.md  uacqr_benchmark_results.csv
(+87 files in other folders)
