[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcs_uq"
version = "0.1.0"
description = "A Python library for generating prediction intervals/sets via the PCS framework."
readme = "README.md"
authors = [
    {name = "Abhineet Agarwal, Michael Xiao, Rebecca Barter, Anthony Ozerov, Boyu Fan, Omer Ronen, Bin Yu", email = "aa3797@berkeley.edu"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/abhineet-agarwal/pcs_uq" 